--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <header>
         <div class="main-title">
-            <h1 class="font">關於我平凡無奇的人生：</h1>
+            <h1 class="font">Welcome to yu's website</h1>
         </div>
         
         <div class="bar-div">
@@ -48,7 +48,7 @@
             <div class="left">
               <div class=about>
                 <h2>關於我</h2>
-                <p>把糖加好加滿的臺南人<br>陰錯陽差下來到虎尾科技大學 <br>熱愛日本文化,音樂,動漫,遊戲等<br>目前正在苦惱著網頁要寫什麼才好</p>
+                <p>把糖加好加滿的臺南人<br>虎尾科技大學尚未畢業 <br>熱愛日本文化,音樂,動漫,遊戲等<br>專長:蛤?這是什麼?</p>
                 </div>
               <div class=contact>
                 <h2>Contact</h2>
@@ -63,23 +63,27 @@
               <div class="chart1">
                 <div class="chart11"></div>
               </div>
-              <div class="chart12">40/100</div>
+              <div class="chart12">31.3/100</div>
               <div class=h5>CSS</div>
                 <div class="chart2">
                     <div class="chart21"></div>
                 </div>
-                <div class="chart22">50/100</div>
+                <div class="chart22">50.7/100</div>
             
               <div class=h5>JS</div>
                 <div class="chart2">
                     <div class="chart31"></div>
                 </div>
-                <div class="chart32">25/100</div>
+                <div class="chart32">18.0/100</div>
                 <div class="h2-end">麻瓜一個｡ﾟヽ(ﾟ´Д`)ﾉﾟ｡</div>
             </div>
             </div>
         </div>
     </div>
+    <div class="sma-div"> </div>
+    <footer>
+        <p><small>&copy; 2024 Design by YUZE</small></p>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="index.js"></script>
 </body>
